Add module lolcommits